<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.pokeirc.pokeircalpha.MainActivity" >

    <item
        android:id="@+id/info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/info"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/next"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/next"/>
    <item
        android:id="@+id/back"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/back"/>
</menu>
