<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.pokeirc.pokeircbeta.SomeActivity">
    <Button
        android:id="@+id/button5"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:onClick="don1"
        android:layout_height="48dp"
        android:layout_weight="0.55"
        android:text="@string/low"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp" />
    <Button
        android:id="@+id/button6"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:onClick="don2"
        android:layout_height="48dp"
        android:layout_weight="0.55"
        android:text="@string/med"
        android:layout_below="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/button7"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:onClick="don3"
        android:layout_height="48dp"
        android:layout_weight="0.55"
        android:text="@string/high"
        android:layout_below="@+id/button6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/button8"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:onClick="don4"
        android:layout_height="48dp"
        android:layout_weight="0.55"
        android:text="@string/weloveyou"
        android:layout_below="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/donation"
        android:text="@string/donation"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
